styles/mainstyle.css
* {
	box-sizing        : border-box;
	margin            : 0px;
}
.box {
	float             : left;
	height            : 100vh;
	overflow          : auto;

}
body>header{
    position: absolute;
    z-index: 1;
    height : 40px;
    width : 100vw;
    min-width: 950px;
    text-align : center;
    color: ghostwhite;
    text-shadow: 0px 0px 1px black;
    line-height : 40px;
    background-color: #729FCF;
    box-shadow: 0px 1px 2px #880000, 0px 1px 5px darkgrey;
}
body>header main {
    position: relative;
    width :950px;
    margin: auto;
}
body>header main nav {
    position: absolute;
    background-color: inherit;
    margin: 0px;
    padding: 0px;
    width : 150px;
}
body>header main section {
    position: absolute;
    left: 150px;
    width: 500px;
    margin: 0px;
}
body>header main aside {
    position: absolute;
    right: 0px;
    width: 300px;
    margin: 0px;
}
body>header a {
    display: block;
    text-decoration: none;
    color: inherit;
}
body>header a:hover {
    color: white;
    text-shadow: 0px 0px 2px black, 0px 0px 3px white;
}
body>main nav {
    width : 150px;
    background-color : gainsboro;
    padding: 50px 0px;
    margin: 0px;
}
body>main nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background-color : lightgrey;
}
body>main nav li a {
    display: block;
    text-decoration: none;
    color: inherit;
    background-color: gainsboro;
    padding: 0px;
    margin: 0px;
    height: 40px;
    line-height: 40px;
}
body>main nav li a:hover {
    text-decoration: none;
    font-weight: bold;
    background-color: aliceblue;
    color: inherit;
}
body>main section {
    padding: 50px 5px;
    width : 500px;
}
body>main section>p {
    background: ghostwhite;
    margin: 15px;
    padding : 10px;
    box-shadow: 0px 0px 5px lightgrey;
}
body>main aside {
    padding: 50px 5px;
    width : 300px;
}
#activeList {
    /* background: gainsboro; */
    box-shadow: 0px 0px 3px darkgrey, 0px 0px 8px darkgrey inset;
    border-radius: 5px;
    overflow: auto;
    max-height: 50vh;
}
fieldset {
    margin: 10px 5px;
	background-color  : ghostwhite;
    border: 0px;
    box-shadow: 0px 0px 1px grey, -2px 2px 4px lightgrey;
}
.clearfix {
    width : 950px;
    margin : auto;
    background-color: aliceblue;
    box-shadow: -2px 0px 3px lightgrey, 0px 0px 50px gainsboro;
}
.clearfix::after {
	content           : "";
	clear             : both;
	display           : table;
}
ul {
	text-align        : center;
	list-style-type   : none;
	margin            : 0;
	padding           : 0;
}
section li {
    /* margin: 20px auto; */
    border-radius: 5px;
}
.available {
    width: 95%;
    padding: 10px;
    background-color: ghostwhite;
    box-shadow: 0px 1px 3px darkgrey;
    border-radius: 5px;

}
.matched, .selected {
	text-align        : left;
	list-style-type   : none;
	background        : ghostwhite;
	margin            : 15px;
	padding           : 10px;
    border-radius: 5px;
    box-shadow: 0px 1px 8px darkgrey;
}
.selected {
    box-shadow: 0px 5px 3px -3px #F00,
				0px 3px 4px -2px #400;
				
}
.qDiv {
    position: relative;
    overflow: hidden;
    padding: 5px;
    background-color: ghostwhite;
    box-shadow: 0px 1px 8px darkgrey;
    border-radius: 5px;
}
.qTop {
    padding: 1% 5%;
}
.qTopLeft {
    padding: 0px 5px;
    float: left;
}
.qTopMid {
    width: 100%;
    /* float: left; */
    width: 90%;
    margin: 0px;
    text-align: left;
}
.qTopRight {
    position: absolute;
    padding: 1%;
    right: 0px;
    top: 0px;
    width: 10%;
    float: right;
}
.qBot {
    width: 100%;
    /* min-height: 150px; */
    /* margin: auto; */
}
.qAns {
    width: 95%;
    min-height: 150px;
    margin: 10px auto;
    background-color: white;
    box-shadow: 0px 0px 5px lightgrey inset;
    text-align: left;
    padding: 2%;
    resize: vertical;
    overflow: hidden;
}
*::-webkit-scrollbar {
    width: 5px;
    background-color: ghostwhite;
    outline: 1px solid darkgrey;
    box-shadow: 0px 0px 3px lightgrey inset;
}
*::-webkit-scrollbar-thumb {
    box-shadow: 0px 0px 5px darkgrey inset;
    border-radius: 15px;
}

